[package]
name = "ygodex-cn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dotenvy = "0.15.7"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["macros", "chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
zip = "2.6.1"

[dev-dependencies]
wiremock = "0.6.3"
